tests/snapshots/e2e__feature_tests__use_on_cd_dot_node_version__Fish.snap
---
source: tests/e2e.rs
expression: "&source.trim()"
---
fnm env --use-on-cd | source
mkdir inner_path
echo v8.11.3 > inner_path/.node-version
fnm install v8.11.3
cd inner_path
if test (node -v) != "v8.11.3"
    echo 'Expected Node version to be "v8.11.3", Got: '(node -v)
    exit 1
end
